# taint-controller

./: Cargo.toml  Dockerfile  taint-controller.yaml
.github/workflows/: docker-publish.yml  rust-workflow.yml
config/: taint-controller.yaml
src/: config.rs  controller.rs  main.rs
