[package]
name = "openstackrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
futures = "0.3.28"
k8s-openapi = { version = "0.19.0", features = ["v1_26"] }
kube = { version = "0.85.0", features = ["runtime"] }
tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.14"
