[package]
name = "openstackrs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
config = { version = "0.15.5", default-features = false, features = ["yaml"] }
futures = "0.3.28"
k8s-openapi = { version = "0.19.0", features = ["v1_26"] }
kube = { version = "0.85.0", features = ["runtime"] }
log = { version = "0.4.22", features = ["kv_unstable", "kv_unstable_serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
structured-logger = "1.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.17"
